@@ -58,9 +58,18 @@
             
   <div class="section" id="module-bgui.image">
 <span id="image"></span><h1>image<a class="headerlink" href="#module-bgui.image" title="Permalink to this headline">¶</a></h1>
+<p>This module defines the following constants:</p>
+<dl class="docutils">
+<dt><em>Texture interpolation modes</em></dt>
+<dd><ul class="first last simple">
+<li>BGUI_NEAREST</li>
+<li>BGUI_LINEAR</li>
+</ul>
+</dd>
+</dl>
 <dl class="class">
 <dt id="bgui.image.Image">
-<em class="property">class </em><tt class="descclassname">bgui.image.</tt><tt class="descname">Image</tt><big>(</big><em>parent, name, img, aspect=None, size=[0, 0], pos=[0, 0], texco=[(0, 0), (1, 0), (1, 1), (0, 1)], sub_theme='', options=12</em><big>)</big><a class="headerlink" href="#bgui.image.Image" title="Permalink to this definition">¶</a></dt>
+<em class="property">class </em><tt class="descclassname">bgui.image.</tt><tt class="descname">Image</tt><big>(</big><em>parent, name, img, aspect=None, size=[0, 0], pos=[0, 0], texco=[(0, 0), (1, 0), (1, 1), (0, 1)], interp_mode=None, sub_theme='', options=12</em><big>)</big><a class="headerlink" href="#bgui.image.Image" title="Permalink to this definition">¶</a></dt>
 <dd><p>Widget for displaying images</p>
 <table class="docutils field-list" frame="void" rules="none">
 <col class="field-name" />
@@ -74,6 +83,7 @@
 <li><strong>size</strong> &#8211; a tuple containing the width and height</li>
 <li><strong>pos</strong> &#8211; a tuple containing the x and y position</li>
 <li><strong>texco</strong> &#8211; the UV texture coordinates to use for the image</li>
+<li><strong>interp_mode</strong> &#8211; texture interpolating mode for both maximizing and minifying the texture (defaults to BGUI_LINEAR)</li>
 <li><strong>sub_theme</strong> &#8211; name of a sub_theme defined in the theme file (similar to CSS classes)</li>
 <li><strong>options</strong> &#8211; various other options</li>
 </ul>
@@ -111,6 +121,12 @@
 <dt id="bgui.image.Image.frozen">
 <tt class="descname">frozen</tt><a class="headerlink" href="#bgui.image.Image.frozen" title="Permalink to this definition">¶</a></dt>
 <dd><p>Whether or not the widget should accept events</p>
+</dd></dl>
+
+<dl class="attribute">
+<dt id="bgui.image.Image.interp_mode">
+<tt class="descname">interp_mode</tt><a class="headerlink" href="#bgui.image.Image.interp_mode" title="Permalink to this definition">¶</a></dt>
+<dd><p>The type of image filtering to be performed on the texture.</p>
 </dd></dl>
 
 <dl class="method">
