@@ -114,6 +114,12 @@
 <dd><p>Whether or not the widget should accept events</p>
 </dd></dl>
 
+<dl class="attribute">
+<dt id="bgui.video.Video.interp_mode">
+<tt class="descname">interp_mode</tt><a class="headerlink" href="#bgui.video.Video.interp_mode" title="Permalink to this definition">¶</a></dt>
+<dd><p>The type of image filtering to be performed on the texture.</p>
+</dd></dl>
+
 <dl class="method">
 <dt id="bgui.video.Video.move">
 <tt class="descname">move</tt><big>(</big><em>position</em>, <em>time</em>, <em>callback=None</em><big>)</big><a class="headerlink" href="#bgui.video.Video.move" title="Permalink to this definition">¶</a></dt>
