@@ -62,6 +62,7 @@
 <li>Labels can now have outlines.</li>
 <li>Widgets now have a z_index value for additional control over drawing order. (thanks to andrew-101)</li>
 <li>New animation system that allows for any property of a widget to be animated using the Animation and ArrayAnimation classes along with Widget.add_animation().</li>
+<li>The minification and magnification filters to use for Image widgets is now user settable between two possible values: BGUI_NEAREST (crisper) and BGUI_LINEAR (smoother). (thanks to SolarLune)</li>
 </ul>
 </div></blockquote>
 </div>
