@@ -351,6 +351,16 @@
   </dl></td>
   <td style="width: 33%" valign="top"><dl>
       
+  <dt><a href="api/image.html#bgui.image.Image.interp_mode">interp_mode (bgui.image.Image attribute)</a>
+  </dt>
+
+      <dd><dl>
+        
+  <dt><a href="api/video.html#bgui.video.Video.interp_mode">(bgui.video.Video attribute)</a>
+  </dt>
+
+      </dl></dd>
+      
   <dt><a href="api/list_box.html#bgui.list_box.ListBox.items">items (bgui.list_box.ListBox attribute)</a>
   </dt>
 
